# pico

./: README.md  pico.sh  pico_monitor.py  pico_run_job.sh  pico_status.py
pico_backend/: README.md  build.sh
pico_backend/SuperNOVAS/include/: novas-mutex.h  novas.h  supernovas.h
pico_backend/SuperNOVAS/include/eop/: libration.tab.c  tidal.tab.c
pico_backend/SuperNOVAS/src/c99/: calendar.c  cio.c  earth.c  ephemeris.c  equator.c  grav.c  moon.c  naif.c  nutation.c  observer.c  orbital.c  place.c  planets.c  refract.c  solsys3.c  spectral.c  system.c  transform.c  util.c
pico_backend/SuperNOVAS/src/cpp/: Angle.cpp  Apparent.cpp  AstrometricPosition.cpp  CMakeLists.txt  Calendar.cpp  CatalogEntry.cpp  Coordinate.cpp  EOP.cpp  Ecliptic.cpp  Equatorial.cpp  Equinox.cpp  Frame.cpp  Geometric.cpp  Interferometric.cpp  Interval.cpp  Observer.cpp  Position.cpp  Pressure.cpp  Scalar.cpp  ScalarEvolution.cpp  ScalarVelocity.cpp  Source.cpp  Spherical.cpp  Time.cpp  TimeAngle.cpp  Track.cpp  Velocity.cpp  Weather.cpp
pico_backend/pico_image/: CMakeLists.txt  plot_imgtest.py
pico_backend/pico_image/include/pico/: antsamp.hpp  calib.hpp  clean.hpp  config.hpp  dm.hpp  dump_vis.hpp  fits_out.hpp  grid.hpp  half.hpp  pipeline.hpp  raw_io.hpp  types.hpp  uvw.hpp
pico_backend/pico_image/src/: antsamp.cpp  calib.cpp  clean.cpp  config.cpp  dm.cpp  dump_vis.cpp  fits_out.cpp  grid.cpp  imgtest.cpp  main.cpp  pipeline.cpp  raw_io.cpp  uvw.cpp
